--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,11 @@
   </head>
 
   <body>
-    <div id="users"></div>
-    <div id="chats"></div>
+    <div>Me: <span id="myUid"></span></div>
+    <div>
+      <div id="users"></div>
+      <div id="chats"></div>
+    </div>
     <script defer src="bundle.js"></script>
   </body>
 </html>
