--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,8 @@
   </head>
 
   <body>
-    <div>Me: <span id="myUid"></span></div>
-    <div>
+    <div id="name-area">Name: <span id="name"></span></div>
+    <div id="chat-area">
       <div id="users"></div>
       <div id="chats"></div>
     </div>
