--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>FirePeer Demo Chat</title>
+    <title>FirePeer P2P Chat</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
 
