issue with popup on load

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   </head>
 
   <body>
-    <div id="name-area">Name: <span id="name"></span></div>
+    <div id="name-area">UID: <span id="uid"></span></div>
     <div id="chat-area">
       <div id="users"></div>
       <div id="chats"></div>
