--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,11 @@
   </head>
 
   <body>
-    <div id="name-area">UID: <span id="uid"></span></div>
-    <div id="chat-area">
+    <div id="header">
+      <strong>UID: </strong><span id="uid"></span> &nbsp;<strong>ID: </strong
+      ><span id="id"></span>
+    </div>
+    <div id="content">
       <div id="users"></div>
       <div id="chats"></div>
     </div>
