--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,9 @@
 
   <body>
     <div>
+      Copy the User ID and Client Id from another tab to connect.
+    </div>
+    <div>
       <p><strong>Your User ID: </strong><span id="uid"></span></p>
       <p><strong>Your Client ID: </strong><span id="id"></span></p>
     </div>
