add link to code

--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
       <h2>Received via P2P:</h2>
       <h3 id="received"></h3>
     </div>
+    <a href="https://github.com/natzcam/firepeer-demo">Code</a>
     <script defer src="bundle.js"></script>
   </body>
 </html>
