--- a/public/index.html
+++ b/public/index.html
@@ -9,16 +9,16 @@
 
   <body>
     <div>
-      Copy the User ID and Client Id from another tab to connect.
+      Copy the User ID and Peer Id from another tab to connect.
     </div>
     <div>
       <p><strong>Your User ID: </strong><span id="uid"></span></p>
-      <p><strong>Your Client ID: </strong><span id="id"></span></p>
+      <p><strong>Your Peer ID: </strong><span id="id"></span></p>
     </div>
     <div>
       <div>
           <label>Peer User ID<input id="receiverUid" type="text" ></input></label>
-          <label>Peer Client ID<input id="receiverId" type="text" ></input></label>
+          <label>Peer Peer ID<input id="receiverId" type="text" ></input></label>
           <input id="connectBtn" type="button" value="Connect"></input>
       </div>
       <div>
